Final_Capstone_project/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doingresslb2
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: finalproject.meetunekue.online
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
            path: /
